feat: add user register component

--- a/src/components/register/index.module.css
+++ b/src/components/register/index.module.css
@@ -1,7 +1,7 @@
 .container {
     width: 98%;
-    margin-top: 113px;
-    margin-bottom: -337px;
+    padding-top: 10px;
+    margin-bottom: -500px;
 }
 
 .form-container {
@@ -15,7 +15,7 @@
 .input-group {
     display: flex;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 16px;
 }
 
 .span-el {
@@ -28,6 +28,18 @@
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     width: 43px;
+    background-color: white;
+}
+
+.info-field {
+    background-color: #ffffff;
+    color: #a94442;
+    height: auto;
+    margin-top: -10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    text-align: center;
+    width: auto;
 }
 
 i {
@@ -47,16 +59,21 @@ i {
     background-color: #166e16;
 }
 
-.register-link {
+.login-link {
     font-style: italic;
     color: #1034a6;
 }
 
-.register-link:hover {
+.login-link:hover {
     font-style: italic;
     font-weight: bold;
     color: #1034a6;
     text-decoration: none;
+}
+
+.login {
+    padding-top: 10px;
+    color: #000080;
 }
 
 .valid {
@@ -69,6 +86,7 @@ i {
     width: 89%;
     padding: 10px;
 }
+
 .invalid {
     border: 2px solid #a94442; /* red */
     border-top-left-radius: 0px;
@@ -102,9 +120,10 @@ i {
     width: auto;
 }
 
-@media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 768px) {
     .container {
-      margin-bottom: -550px;
+      padding: 5px;
+      margin-bottom: -687px;
       width: 90%;
+    }
   }
-}
