--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -13,6 +13,7 @@
     padding: 0px;
     font-size: 20px;
     font: 1.1em sans-serif;
+    font-family: unset;
     background-color: #f8f9fa;
   }
 
@@ -20,7 +21,7 @@
     color: rgba(0,0,0,.5);
     font-family: sans-serif;
     font-size: 17.6px;
-    margin: 5px;
+    margin: 7px;
     text-decoration: none;
   }
 
