style: change style of button

--- a/src/components/comment-create/index.module.css
+++ b/src/components/comment-create/index.module.css
@@ -3,7 +3,7 @@
     background-repeat:no-repeat;
     height: 30px;
     width: 80px;
-    border: 1px solid black;
+    border: 1px solid white;
     color: black;
     border-radius: 5px;
     margin-bottom: 0px;
