--- a/src/components/book/index.module.css
+++ b/src/components/book/index.module.css
@@ -18,7 +18,7 @@
     flex-direction: column;
     justify-content: space-between;
   }
-  img {
+  .img {
     border-radius: 5px;
     height: 180px;
     width: 150px;
