--- a/src/components/book/index.module.css
+++ b/src/components/book/index.module.css
@@ -80,6 +80,9 @@
     margin: 2px;
     margin-bottom: 0px;
   }
+  .black i {
+    color: black;
+  }
 
 
   @media only screen and (max-width: 1280px) {
