style: change style of ValidatorEl

--- a/src/components/validator-el/index.module.css
+++ b/src/components/validator-el/index.module.css
@@ -1,10 +1,11 @@
 .info-field {
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
     color: #a94442;
     height: auto;
-    margin-top: -10px;
-    margin-bottom: 10px;
-    border-radius: 5px;
+    /* margin-top: -10px;
+    margin-bottom: 10px; */
+    /* border-radius: 5px; */
     text-align: center;
+    font-style: italic;
     width: auto;
 }
