--- a/src/pages/register/index.module.css
+++ b/src/pages/register/index.module.css
@@ -1,112 +1,16 @@
 .container {
     width: 98%;
     padding-top: 10px;
-    margin-bottom: -500px;
+    margin-bottom: -480px;
 }
 
 .form-container {
     background-color: rgb(0, 0, 0, 0.1);
-    padding: 20px;
-    padding-bottom: 0px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
     border-radius: 4px;
     border: 1px solid white;
-}
-
-.input-group {
-    display: flex;
-    width: 100%;
-    margin-bottom: 16px;
-}
-
-.span-el {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-left: 2px solid #42a948;
-    border-top: 2px solid #42a948;
-    border-bottom: 2px solid #42a948;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    width: 43px;
-    background-color: white;
-}
-
-.info-field {
-    background-color: #ffffff;
-    color: #a94442;
-    height: auto;
-    margin-top: -10px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    text-align: center;
-    width: auto;
-}
-
-i {
-    color: #42a948;
-}
-
-.submit-button {
-    border: 2px solid grey;
-    background-color: #42a948;
-    width: 100%;
-    height: calc(1.5em + .75rem + 2px);
-    color: white;
-    border-radius: 5px;
-}
-
-.submit-button:hover {
-    background-color: #166e16;
-}
-
-.login-link {
-    font-style: italic;
-    color: #1034a6;
-}
-
-.login-link:hover {
-    font-style: italic;
-    font-weight: bold;
-    color: #1034a6;
-    text-decoration: none;
-}
-
-.login {
-    padding-top: 10px;
-    color: #000080;
-}
-
-.valid {
-    border: 2px solid #42a948; /* green */
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    height: calc(1.5em + .75rem + 2px);
-    width: 89%;
-    padding: 10px;
-}
-
-.invalid {
-    border: 2px solid #a94442; /* red */
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    height: calc(1.5em + .75rem + 2px);
-    padding: 10px;
-    width: 89%;
-}
-
-.info-field {
-    background-color: #ffffff;
-    color: #a94442;
-    height: auto;
-    margin-top: -10px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    text-align: center;
-    width: auto;
 }
 
   @media only screen and (max-width: 768px) {
