feat: added validations of the input data and the new InputEl, ValidatorEl, SubmitButton components

--- a/src/components/submit-button/index.module.css
+++ b/src/components/submit-button/index.module.css
@@ -11,3 +11,18 @@
 .submit-button:hover {
   background-color: #166e16;
 }
+
+.submit-button-userprofile {
+  border: 2px solid grey;
+  background-color: #42a948;
+  width: 50%;
+  min-height: calc(1.5em + .75rem + 2px);
+  height: auto;
+  color: white;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+
+.submit-button-userprofile:hover {
+  background-color: #166e16;
+}
