--- a/src/components/validator-el/index.module.css
+++ b/src/components/validator-el/index.module.css
@@ -1,7 +1,7 @@
 .info-field {
     /* background-color: #ffffff; */
     color: #a94442;
-    height: 20px;
+    min-height: 20px;
     /* margin-top: -10px;
     margin-bottom: 10px; */
     /* border-radius: 5px; */
