style: change style

--- a/src/components/validator-el/index.module.css
+++ b/src/components/validator-el/index.module.css
@@ -8,6 +8,6 @@
     text-align: left;
     font-style: italic;
     font-size: small;
-    /* font-weight: bold; */
+    font-weight: bold;
     width: auto;
 }
