--- a/src/components/notification/undex.module.css
+++ b/src/components/notification/undex.module.css
@@ -2,11 +2,9 @@
   position: fixed;
   right: 10px;
   top: 70px; 
-  font: italic small-caps bold 13px/18px Georgia, serif;
   color: #fdfff5;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   border: 1px solid white;
-  background-color: rgb(155, 1, 1);
+  background-color: #166e16;
   padding: 10px;
   border-radius: 50px;
 }
