feat: transform class component BookDetails to functional, added functionality: delete and rate book, create and delete comment

--- a/src/pages/book-all/index.module.css
+++ b/src/pages/book-all/index.module.css
@@ -6,7 +6,7 @@
   .grid-container {
     display: flex;
     justify-content: center;
-    margin-bottom: -577px;
+    /* margin-bottom: -577px; */
   }
   .grid {
     margin-top: 20px;
