--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -1,55 +1,75 @@
 .sticky {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0px;
-    padding: 4px;
-    border-radius: 5px;
-  }
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  padding: 4px;
+  border-radius: 5px;
+}
 
-  .navbar {
-    display: flex;
-    justify-content: flex-start;
-    border-radius: 3px;
-    padding: 0px;
-    font-size: 20px;
-    font: 1.1em sans-serif;
-    font-family: unset;
-    background-color: #f8f9fa;
-  }
+.navbar {
+  display: flex;
+  justify-content: flex-start;
+  border-radius: 3px;
+  padding: 0px;
+  font-size: 20px;
+  font: 1.1em sans-serif;
+  font-family: unset;
+  background-color: #f8f9fa;
+}
 
-  .nav-link {
-    color: rgba(0,0,0,.5);
-    font-family: sans-serif;
-    font-size: 17.6px;
-    margin: 7px;
-    text-decoration: none;
-    cursor: pointer;
-  }
+.nav-link {
+  color: rgba(0,0,0,.5);
+  font-family: sans-serif;
+  font-size: 17.6px;
+  margin: 7px;
+  text-decoration: none;
+  cursor: pointer;
+}
 
-  .nav-link:hover {
-    color: rgba(0,0,0,.7);
-    text-decoration: none;
-  }
+.nav-link:hover {
+  color: rgba(0,0,0,.7);
+  text-decoration: none;
+}
 
-  .nav-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    border: 1px solid grey;
-    margin-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    padding: 3px;
-    list-style-type: none;
-  }
+.nav-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  border: 1px solid grey;
+  margin-left: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 3px;
+  list-style-type: none;
+}
   
+.nav-image {
+  border-radius: 5px;
+  border: 1px solid grey;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 10px;
+  width: 110px;
+  height: 45px;
+}
+
+@media only screen and (max-width: 768px) {
+  .nav-link {
+    /* color: rgba(0,0,0,.5); */
+    /* font-family: sans-serif; */
+    font-size: 10px;
+    margin: 1px;
+    /* text-decoration: none;
+    cursor: pointer; */
+  }
   .nav-image {
     border-radius: 5px;
     border: 1px solid grey;
     margin-top: 5px;
     margin-bottom: 5px;
     margin-left: 10px;
-    width: 110px;
-    height: 45px;
+    width: 50px;
+    height: 25px;
   }
+}  
