--- a/src/components/loader/index.module.css
+++ b/src/components/loader/index.module.css
@@ -4,63 +4,112 @@
     right: 10px;
     top: 10px; 
 }
-  
-  .body {
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    background: #222; }
-  
+.body {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background: #222; 
+}
+.loading {
+  display: flex;
+  animation-delay: 1s; 
+}
+.loading .dot {
+  position: relative;
+  width: 0.8em;
+  height: 0.8em;
+  margin: 0.8em;
+  border-radius: 50%; 
+}
+.loading .dot::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  border-radius: inherit;
+  animation: wave 2s ease-out infinite; 
+}
+.loading .dot:nth-child(1) {
+  background: #d0fBce; 
+}
+.loading .dot:nth-child(1)::before {
+    animation-delay: 0.2s; 
+}
+.loading .dot:nth-child(2) {
+  background: #72d572; 
+}
+  .loading .dot:nth-child(2)::before {
+    animation-delay: 0.4s; 
+}
+.loading .dot:nth-child(3) {
+  background: #2baf2b; 
+}
+  .loading .dot:nth-child(3)::before {
+    animation-delay: 0.6s; 
+}
+.loading .dot:nth-child(4) {
+  background: #0a8f08; 
+}
+  .loading .dot:nth-child(4)::before {
+    animation-delay: 0.8s; 
+}
+.loading .dot:nth-child(5) {
+  background: #056f00; 
+}
+  .loading .dot:nth-child(5)::before {
+    animation-delay: 1s; 
+}
+
+@keyframes wave {
+  50%,
+    75% {
+    transform: scale(2.5); 
+  }
+  80%,
+    100% {
+    opacity: 0; 
+  } 
+}
+@media only screen and (max-width: 768px) {
   .loading {
-    display: flex;
-    animation-delay: 1s; }
-    .loading .dot {
-      position: relative;
-      width: 0.8em;
-      height: 0.8em;
-      margin: 0.8em;
-      border-radius: 50%; }
-      .loading .dot::before {
-        position: absolute;
-        content: "";
-        width: 100%;
-        height: 100%;
-        background: inherit;
-        border-radius: inherit;
-        animation: wave 2s ease-out infinite; }
-      .loading .dot:nth-child(1) {
-        background: #d0fBce; }
-        .loading .dot:nth-child(1)::before {
-          animation-delay: 0.2s; }
-      .loading .dot:nth-child(2) {
-        background: #72d572; }
-        .loading .dot:nth-child(2)::before {
-          animation-delay: 0.4s; }
-      .loading .dot:nth-child(3) {
-        background: #2baf2b; }
-        .loading .dot:nth-child(3)::before {
-          animation-delay: 0.6s; }
-      .loading .dot:nth-child(4) {
-        background: #0a8f08; }
-        .loading .dot:nth-child(4)::before {
-          animation-delay: 0.8s; }
-      .loading .dot:nth-child(5) {
-        background: #056f00; }
-        .loading .dot:nth-child(5)::before {
-          animation-delay: 1s; }
-  
+    right: 4px;
+    top: 4px; 
+    height: 20px;
+  }
+
+  .dot {
+    width: 10px;
+    height: 10px; 
+  }
+
+  .loading .dot:nth-child(1) {
+    background: #2baf2b; 
+  }
+  .loading .dot:nth-child(1)::before {
+      animation-delay: 0.2s; 
+  }
+  .loading .dot:nth-child(2) {
+    background: #0a8f08; 
+  }
+    .loading .dot:nth-child(2)::before {
+      animation-delay: 0.4s; 
+  }
+  .loading .dot:nth-child(3) {
+    background: #056f00; 
+  }
+    .loading .dot:nth-child(3)::before {
+      animation-delay: 0.6s; 
+  }
   @keyframes wave {
     50%,
       75% {
-      transform: scale(2.5); }
+      transform: scale(2.5); 
+    }
     80%,
       100% {
-      opacity: 0; } }
-  @media only screen and (max-width: 768px) {
-    .loading {
-      width: 60%; }
-  
-    .dot {
-      width: 0.9em;
-      height: 0.9em; } }
+      opacity: 0; 
+    } 
+  }
+}
