--- a/src/pages/login/index.module.css
+++ b/src/pages/login/index.module.css
@@ -1,20 +1,15 @@
 .container {
-    width: 98%;
-    margin-top: 113px;
-    margin-bottom: -365px;
+    width: 100%;
+    margin-top: 90px;
+    margin-bottom: -340px;
 }
 
 .form-container {
     background-color: rgb(0, 0, 0, 0.1);
     padding: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
     padding-bottom: 0px;
     border-radius: 4px;
     border: 1px solid white;
-}
-
-@media only screen and (max-width: 768px) {
-    .container {
-      margin-bottom: -550px;
-      width: 90%;
-  }
 }
