--- a/src/pages/register/index.module.css
+++ b/src/pages/register/index.module.css
@@ -1,5 +1,5 @@
 .container {
-    width: 98%;
+    width: 100%;
     padding-top: 10px;
     margin-bottom: -480px;
 }
@@ -9,14 +9,8 @@
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
     border-radius: 4px;
     border: 1px solid white;
 }
-
-  @media only screen and (max-width: 768px) {
-    .container {
-      padding: 5px;
-      margin-bottom: -687px;
-      width: 90%;
-    }
-  }
