--- a/client/src/components/validator-el/index.module.css
+++ b/client/src/components/validator-el/index.module.css
@@ -1,6 +1,6 @@
 .info-field {
     /* background-color: #ffffff; */
-    color: #a94442;
+    color: darkred;
     min-height: 20px;
     /* margin-top: -10px;
     margin-bottom: 10px; */
@@ -8,6 +8,6 @@
     text-align: left;
     font-style: italic;
     font-size: small;
-    font-weight: bold;
+    /* font-weight: bold; */
     width: auto;
 }
