--- a/client/src/components/textarea-el/index.module.css
+++ b/client/src/components/textarea-el/index.module.css
@@ -40,7 +40,7 @@
 }
 
 .valid {
-    border: 2px solid #42a948; /* green */
+    border: 2px solid #42a948;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
     border-top-right-radius: 5px;
@@ -49,7 +49,7 @@
     padding: 10px;
   }
   .invalid {
-    border: 2px solid darkred; /* red */
+    border: 2px solid darkred;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
     border-top-right-radius: 5px;
