feat: added user's image uploading and keeping previous functionality for changing an image by its url

--- a/client/src/components/input-upload-el/index.module.css
+++ b/client/src/components/input-upload-el/index.module.css
@@ -71,3 +71,15 @@
   .btn:hover {
     background-color: #166e16;
   }
+  .userbtn {
+    border: 2px solid grey;
+    background-color: #42a948;
+    width: 80%;
+    height: calc(1.5em + .75rem + 2px);
+    color: white;
+    border-radius: 5px;
+  }
+  
+  .userbtn:hover {
+    background-color: #166e16;
+  }
