--- a/client/src/pages/book-all/index.module.css
+++ b/client/src/pages/book-all/index.module.css
@@ -1,55 +1,90 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  } */
+.grid-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: -570px;
+}
+.grid {
+  margin-top: 40px;
+  width: auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: stretch;
+}
+
+.pagination {
+  position: fixed;
+  top: 65px;
+  right: 45%;
+  display: flex;
+  justify-content: center;
+  margin-top: 0px;
+}
+  
+.pagination span {
+cursor: pointer;
+color: black;
+float: left;
+margin: 0px 2px;
+padding: 4px 8px;
+text-decoration: none;
+transition: background-color .3s;
+border: 1px solid #ddd;
+}
+  
+.pagination span.active {
+background-color: #0099FF;
+color: white;
+border: 1px solid #0099FF;
+}
+
+.pagination span:first-child {
+  border-top-left-radius: 40%;
+  border-bottom-left-radius: 40%;
+}
+.pagination span:last-child {
+  border-top-right-radius: 40%;
+  border-bottom-right-radius: 40%;
+}
+  
+  
+@media only screen and (max-width: 1280px) {
   .grid-container {
     display: flex;
     justify-content: center;
-    /* margin-bottom: -577px; */
   }
   .grid {
-    margin-top: 20px;
-    width: auto;
+    margin-top: 40px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: stretch;
+    width: 100%;
   }
-  
-  
-  @media only screen and (max-width: 1280px) {
-    .grid-container {
-      display: flex;
-      justify-content: center;
-    }
-    .grid {
-      margin-top: 20px;
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: stretch;
-      width: 100%;
-    }
-    .grid-item {
-      justify-content: space-around;
-      align-items: stretch;
-      width: 40%;
-    }
+  /* .grid-item {
+    justify-content: space-around;
+    align-items: stretch;
+    width: 40%;
+  } */
+}
+
+@media only screen and (max-width: 768px) {
+  .grid-container {
+    display: flex;
+    justify-content: center;
   }
-  @media only screen and (max-width: 768px) {
-    .grid-container {
-      display: flex;
-      justify-content: center;
-    }
-    .grid {
-      width: auto;
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: center;
-      align-items: stretch;
-    }
+  .grid {
+    margin-top: 40px;
+    width: auto;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: stretch;
   }
+  .pagination {
+    top: 45px;
+  }
+}
