--- a/client/src/components/footer/index.module.css
+++ b/client/src/components/footer/index.module.css
@@ -1,9 +1,21 @@
 .footer {
-    display: block;
-    margin-top: 79.5vh;
-    font-size: 20px;
-    color: rgba(0,0,0,.5);
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    padding: 10px;
+  color: rgba(0,0,0,.5);
+  display: block;
+  font-size: 20px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  margin-top: 79.5vh;
+  padding: 10px;
+}
+
+@media only screen and (max-width: 768px) {
+  .footer {
+    font-size: 15px;
   }
+} 
+
+@media only screen and (max-width: 480px) {
+  .footer {
+    font-size: 10px;
+  }
+} 
