--- a/client/src/pages/book-all/index.module.css
+++ b/client/src/pages/book-all/index.module.css
@@ -15,15 +15,15 @@
 }
 
 .pagination {
-  display: flex;
-  justify-content: center;
   position: fixed;
+  left: 50%;
+  transform: translate(-50%, 0);
   margin-top: 0px;
-  right: 45%;
   top: 65px;
 }
   
 .pagination span {
+  display: flex;
   border: 1px solid #ddd;
   color: black;
   cursor: pointer;
@@ -67,7 +67,6 @@
 }
 
 @media only screen and (max-width: 768px) {
-
   .grid-container {
     display: flex;
     justify-content: center;
